--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-requires a the jupyter notebook library to run. Pandas also required since the train set in my case is in a csv file
-to install them both run on terminal
-
-pip install pandas
-pip install jupyter notebook
+pandas
+numpy
+scikit-learn
+torch
 
